@@ -3,6 +3,7 @@
 * Fat Zebra: More consistent handling of tokens [adrianmacneil]
 * Add Platron integration [alexwl]
 * Litle: Support wiredump_device [pierre]
+* Litle: support paypage registrations [pierre]
 
 == Version 1.35.1 (July 22, 2013)
 
